--- a/packages/react-components/src/components/MIMap/MapControls/MapControls.scss
+++ b/packages/react-components/src/components/MIMap/MapControls/MapControls.scss
@@ -36,8 +36,3 @@
         right: var(--spacing-medium);
     }
 }
-
-// Optional: Add any specific overrides for open state
-#venue-selector-portal.__open {
-    z-index: 1;
-}
